# flexipodControl

./: .gitignore
IMU/Adafruit/: serial_test.py  tmp.ipynb
IMU/Adafruit/Adafruit_Acc_Calibration/: Adafruit_Acc_Calibration.ino
IMU/Adafruit/MadgwickAHRS/: MadgwickAHRS.cpp  MadgwickAHRS.h  MadgwickAHRS.ino
IMU/Board_Display/: BoardDisplay.py  Wireframe.py  readSensor.py
IMU/Gyroscope_Calibration/: Gyroscope_Calibration.ino
IMU/MPU9250/Board_Display/: BoardDisplay.py  Wireframe.py  readSensor.py
IMU/MPU9250/Gyroscope_Calibration/: Gyroscope_Calibration.ino
IMU/MPU9250/MPU9250_Madgwick/: MPU9250.cpp  MPU9250.h  MPU9250_Madgwick.ino
IMU/MPU9250/Magnetometer Calibration/: Collect_Data.py  ellipsoid_fit.m  magnetometer_calibration.m
IMU/MPU9250_Madgwick/: MPU9250.cpp  MPU9250.h  MPU9250_Madgwick.ino
IMU/Magnetometer Calibration/: Collect_Data.py  ellipsoid_fit.m  magnetometer_calibration.m
Motor_Control/Jetson/: a.out  host.cpp  host.h
Motor_Control/Jetson_UDP_Test/: host.cpp  host.h
Motor_Control/PC/: CMakeLists.txt  recv.cpp  send.cpp
Motor_Control/Teensy/: Teensy.h  Teensy.ino  TeensyCAN.cpp
Motor_Control/Teensy_Adafruit/: Teensy.ino
Test/Jetson/: a.out
